--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -29,8 +29,6 @@ jobs:
 
       - name: Run Gitleaks
         uses: gitleaks/gitleaks-action@v2
-        id: gitleaks
-        continue-on-error: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITLEAKS_LICENSE: ${{ secrets.GITLEAKS_LICENSE }}
@@ -43,12 +41,6 @@ jobs:
           path: results.sarif
           retention-days: 30
           if-no-files-found: ignore
-
-      - name: Check Gitleaks result
-        if: steps.gitleaks.outcome == 'failure'
-        run: |
-          echo "::error::Gitleaks found leaked secrets! Check the artifacts for details."
-          echo "SECRETS_FOUND=true" >> $GITHUB_ENV
 
   # ─────────────────────────────────────────────
   # Job 2: Python dependency vulnerability scan
@@ -70,12 +62,10 @@ jobs:
         run: pip install pip-audit
 
       - name: Scan Python dependencies
-        id: pip_audit
-        continue-on-error: true
         run: |
           cd backend
-          pip-audit -r requirements.txt --format json --output ../pip-audit-results.json || true
-          pip-audit -r requirements.txt || true
+          pip-audit -r requirements.txt --format json --output ../pip-audit-results.json
+          pip-audit -r requirements.txt
 
       - name: Upload pip-audit report
         if: always()
@@ -93,13 +83,11 @@ jobs:
           node-version: '20'
 
       - name: Scan npm dependencies
-        id: npm_audit
-        continue-on-error: true
         run: |
           cd frontend
           npm ci
-          npm audit --json > ../npm-audit-results.json || true
-          npm audit || true
+          npm audit --json > ../npm-audit-results.json
+          npm audit
 
       - name: Upload npm audit report
         if: always()
@@ -129,11 +117,9 @@ jobs:
         run: pip install bandit[toml]
 
       - name: Run Bandit on backend
-        id: bandit
-        continue-on-error: true
         run: |
-          bandit -r backend/ -f json -o bandit-results.json --severity-level medium || true
-          bandit -r backend/ --severity-level medium || true
+          bandit -r backend/ -f json -o bandit-results.json --severity-level medium
+          bandit -r backend/ --severity-level medium
 
       - name: Upload Bandit report
         if: always()
@@ -161,9 +147,10 @@ jobs:
           scan-ref: '.'
           format: 'table'
           severity: 'CRITICAL,HIGH,MEDIUM'
-          exit-code: '0'
+          exit-code: '1'
 
       - name: Run Trivy (SARIF output)
+        if: always()
         uses: aquasecurity/trivy-action@master
         with:
           scan-type: 'fs'
@@ -173,88 +160,7 @@ jobs:
           severity: 'CRITICAL,HIGH,MEDIUM'
 
       - name: Upload Trivy SARIF report
-        uses: github/codeql-action/upload-sarif@v3
+        uses: github/codeql-action/upload-sarif@v4
         if: always()
         with:
           sarif_file: 'trivy-results.sarif'
-
-  # ─────────────────────────────────────────────
-  # Job 5: Email notification on findings
-  # ─────────────────────────────────────────────
-  notify:
-    name: Email Security Report
-    runs-on: ubuntu-latest
-    needs: [gitleaks, dependency-scan, bandit, trivy]
-    if: always()
-    steps:
-      - name: Determine scan status
-        id: status
-        run: |
-          GITLEAKS="${{ needs.gitleaks.result }}"
-          DEPS="${{ needs.dependency-scan.result }}"
-          BANDIT="${{ needs.bandit.result }}"
-          TRIVY="${{ needs.trivy.result }}"
-
-          if [[ "$GITLEAKS" == "failure" || "$DEPS" == "failure" || "$BANDIT" == "failure" || "$TRIVY" == "failure" ]]; then
-            echo "overall=ISSUES FOUND" >> $GITHUB_OUTPUT
-            echo "color=red" >> $GITHUB_OUTPUT
-          else
-            echo "overall=ALL CLEAR" >> $GITHUB_OUTPUT
-            echo "color=green" >> $GITHUB_OUTPUT
-          fi
-
-          echo "gitleaks=$GITLEAKS" >> $GITHUB_OUTPUT
-          echo "deps=$DEPS" >> $GITHUB_OUTPUT
-          echo "bandit=$BANDIT" >> $GITHUB_OUTPUT
-          echo "trivy=$TRIVY" >> $GITHUB_OUTPUT
-
-      - name: Send email notification
-        uses: dawidd6/action-send-mail@v3
-        with:
-          server_address: ${{ secrets.SMTP_SERVER }}
-          server_port: ${{ secrets.SMTP_PORT }}
-          username: ${{ secrets.SMTP_USERNAME }}
-          password: ${{ secrets.SMTP_PASSWORD }}
-          subject: "GPU Connect Security Scan: ${{ steps.status.outputs.overall }}"
-          to: ${{ secrets.NOTIFY_EMAIL }}
-          from: ${{ secrets.SMTP_FROM || secrets.SMTP_USERNAME }}
-          content_type: text/html
-          body: |
-            <h2>GPU Connect Security Scan Report</h2>
-            <p><strong>Repository:</strong> ${{ github.repository }}</p>
-            <p><strong>Branch:</strong> ${{ github.ref_name }}</p>
-            <p><strong>Commit:</strong> <code>${{ github.sha }}</code></p>
-            <p><strong>Triggered by:</strong> ${{ github.event_name }}</p>
-            <p><strong>Run:</strong> <a href="${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}">View on GitHub</a></p>
-            <hr>
-            <h3>Scan Results</h3>
-            <table border="1" cellpadding="8" cellspacing="0" style="border-collapse: collapse;">
-              <tr style="background-color: #f0f0f0;">
-                <th>Scanner</th>
-                <th>What it checks</th>
-                <th>Result</th>
-              </tr>
-              <tr>
-                <td>Gitleaks</td>
-                <td>API keys, tokens, passwords in code & git history</td>
-                <td>${{ steps.status.outputs.gitleaks == 'success' && '✅ Clean' || '⚠️ Issues found' }}</td>
-              </tr>
-              <tr>
-                <td>Dependency Scan</td>
-                <td>Known CVEs in Python (pip-audit) & Node.js (npm audit) packages</td>
-                <td>${{ steps.status.outputs.deps == 'success' && '✅ Clean' || '⚠️ Issues found' }}</td>
-              </tr>
-              <tr>
-                <td>Bandit</td>
-                <td>Python security anti-patterns (SQL injection, hardcoded passwords, etc.)</td>
-                <td>${{ steps.status.outputs.bandit == 'success' && '✅ Clean' || '⚠️ Issues found' }}</td>
-              </tr>
-              <tr>
-                <td>Trivy</td>
-                <td>Comprehensive vulnerability & secret scan (filesystem)</td>
-                <td>${{ steps.status.outputs.trivy == 'success' && '✅ Clean' || '⚠️ Issues found' }}</td>
-              </tr>
-            </table>
-            <hr>
-            <p>📎 Download detailed reports from the <a href="${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}">GitHub Actions run artifacts</a>.</p>
-            <p style="color: gray; font-size: 12px;">Automated by GPU Connect CI/CD pipeline</p>
